--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "e-commerce-store": "file:..",
     "express": "^5.2.1"
   },
   "devDependencies": {
